# medbot

aggregation_server/: README.md  pubspec.yaml
aggregation_server/android/app/: build.gradle.kts
aggregation_server/android/app/src/main/: AndroidManifest.xml
aggregation_server/android/app/src/main/kotlin/com/example/aggregation_server/: MainActivity.kt
aggregation_server/ios/Runner/: Info.plist
aggregation_server/ios/Runner.xcodeproj/: project.pbxproj
aggregation_server/lib/: main.dart
aggregation_server/linux/: CMakeLists.txt
aggregation_server/linux/runner/: my_application.cc
aggregation_server/macos/Runner.xcodeproj/: project.pbxproj
aggregation_server/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
aggregation_server/macos/Runner/Configs/: AppInfo.xcconfig
aggregation_server/web/: index.html  manifest.json
aggregation_server/windows/: CMakeLists.txt
aggregation_server/windows/runner/: Runner.rc  main.cpp
latcheck/: CMakeLists.txt  Main.qml  client_requirements_v1.0.txt  configmanager.cpp  configmanager.h  error_codes.h  latencychecker.cpp  latencychecker.h  locationservice.cpp  locationservice.h  logger.cpp  logger.h  main.cpp  message_protocol.cpp  message_protocol.h  networkmanager.cpp  networkmanager.h  requirements.txt  server_requirements_v1.0.txt
latcheck/config/: config.json
latcheck_server/: CMakeLists.txt  build.sh  main.cpp  requirements_backup.txt  requirements_v1.0.txt  rest_api requirements.txt
latcheck_server/config/: config.json  ip_result.txt  whitelist.txt
latcheck_server/config/certs/: ca.crt  server.crt  server.csr  server.ext  server.key
latcheck_server/database/: create_database.sql  import_database.sh
latcheck_server/include/auth/: auth_manager.h  password_utils.h
latcheck_server/include/common/: error_codes.h  types.h
latcheck_server/include/config/: config_manager.h
latcheck_server/include/database/: base_dao.h  database_pool.h  report_dao.h  server_dao.h  user_dao.h
latcheck_server/include/logger/: logger.h
latcheck_server/include/protocol/: message_protocol.h
latcheck_server/include/server/: tls_server.h
latcheck_server/src/auth/: auth_manager.cpp  password_utils.cpp
latcheck_server/src/config/: config_manager.cpp
latcheck_server/src/database/: base_dao.cpp  database_pool.cpp  report_dao.cpp  server_dao.cpp  user_dao.cpp
latcheck_server/src/logger/: logger.cpp
latcheck_server/src/protocol/: message_protocol.cpp
latcheck_server/src/server/: tls_server.cpp
